--- a/resources.cfg
+++ b/resources.cfg
@@ -24,9 +24,10 @@ FileSystem=/usr/local/share/OGRE/Media/RTShaderLib/materials
 FileSystem=/usr/local/share/OGRE/Media/materials/scripts/SSAO
 FileSystem=/usr/local/share/OGRE/Media/materials/textures/SSAO
 FileSystem=/usr/local/share/OGRE/Media/volumeTerrain
-FileSystem=/home/mzagainova/workspace/boats
-FileSystem=/home/mzagainova/Desktop/381/material/
-Zip=/home/mzagainova/workspace/PA05_b/381.zip
+#FileSystem=/home/mzagainova/workspace/boats
+#FileSystem=/home/mzagainova/Desktop/381/material/
+Zip=/home/kc/git-repos/CS381/381.zip
+#Zip=/home/mzagainova/workspace/PA05_b/381.zip
 Zip=/usr/local/share/OGRE/Media/packs/cubemap.zip
 Zip=/usr/local/share/OGRE/Media/packs/cubemapsJS.zip
 Zip=/usr/local/share/OGRE/Media/packs/dragon.zip
